fix: move globe down to avoid top clipping

--- a/src/components/CreativeWork.css
+++ b/src/components/CreativeWork.css
@@ -105,7 +105,7 @@
 /* Globe Preview - positioned to bottom-right corner, clipped */
 .globe-preview {
   position: absolute;
-  top: 25%;
+  top: 35%;
   right: -45%;
   width: 140%;
   height: 140%;
